# LL-ohjelmistotuotanto

./: README.md  haara2.txt  haara2_2.txt  klooni.txt  kloonihaara1.txt  pyproject.toml  tag_testi.txt  testi_clone.txt  testi_orig.txt
.github/workflows/: main.yml
viikko1/nhl-statistics-1/: .coveragerc
viikko1/nhl-statistics-1/src/: index.py  player.py  player_reader.py  statistics.py
viikko2/: haara1.txt
viikko2/git_branch/: haara1.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/: pyproject.toml
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/htmlcov/: _Users_lasselautanala_Library_Caches_pypoetry_virtualenvs_verkkokauppa-GKyq_Ixf-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _Users_lasselautanala_Library_Caches_pypoetry_virtualenvs_verkkokauppa-GKyq_Ixf-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _Users_lasselautanala_Library_Caches_pypoetry_virtualenvs_verkkokauppa-GKyq_Ixf-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _Users_lasselautanala_Library_Caches_pypoetry_virtualenvs_verkkokauppa-GKyq_Ixf-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _Users_lasselautanala_Library_Caches_pypoetry_virtualenvs_verkkokauppa-GKyq_Ixf-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  (+98 more)
viikko5/: xxx  yyy
viikko6/query-language/src/: index.py  (+4 more)
(+14 files in other folders)
