[tool.poetry]
name = "ohtu-tehtavat"
version = "0.1.0"
description = "OHTU-tehtävät"
authors = ["Lasse Lautanala <lasselautanala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
