[tool.poetry]
name = "verkkokauppa-haku"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
pyproject-toml = "^0.0.6"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
